--- a/nice/to/meet/you/im/fine/how/about/you/btw/im/such/a/nice/person/so/im/very/humble/this/is/my/repository/files/import/css/for/websites/of/9to5network/files/import-files/cjdfhuyudfsfhj import for style 1.css
+++ b/nice/to/meet/you/im/fine/how/about/you/btw/im/such/a/nice/person/so/im/very/humble/this/is/my/repository/files/import/css/for/websites/of/9to5network/files/import-files/cjdfhuyudfsfhj import for style 1.css
@@ -1,1 +1,1 @@
-@import 'hello/nice/to/meet/you/im/fine/how/about/you/btw/im/such/a/nice/person/so/im/very/humble/this/is/my/repository/files/css/css-style-1/hjkhskjehkjghkjshkstsuxgjlixglix minified css for style 1.css';
+@import 'hello/nice/to/meet/you/im/fine/how/about/you/btw/im/such/a/nice/person/so/im/very/humble/this/is/my/repository/files/css/css-style-1/hjkhskjehkjghkjshkstsuxgjlixglix%20minified%20css%20for%20style%201.css';
